SONAR-2701 Fix vertical alignment when spark lines are displayed

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -1822,6 +1822,7 @@ table.widget-matrix tbody td {
   border: 1px solid #ddd;
   margin: 0;
   padding: 1px 2px 1px 10px;
+  vertical-align: middle;
 }
 
 
